[package]
name = "nes"
version = "0.1.0"
authors = ["Gus Prevas <kprevas@gmail.com>"]

[dependencies]
log = "0.4.1"
env_logger = "0.4.3"
clap = "2.29.0"
piston = "0.35.0"
piston2d-graphics = "0.24.0"
pistoncore-glutin_window = "0.43.0"
piston2d-opengl_graphics = "0.50.0"
image = "0.18.0"
bitflags = "1.0.1"
time = "*"
piston_window = "0.74.0"
find_folder = "0.3.0"
hex-slice = "0.1.2"