[package]
name = "nes"
version = "0.1.0"
authors = ["Gus Prevas <kprevas@gmail.com>"]

[dependencies]
log = "0.4.1"
env_logger = "0.4.3"
clap = "2.29.0"
piston = "0.36.0"
piston2d-graphics = "0.26.0"
piston2d-opengl_graphics = "0.52.0"
image = "0.18.0"
bitflags = "1.0.1"
time = "*"
piston_window = "0.77.0"
find_folder = "0.3.0"
hex-slice = "0.1.2"
nfd = "0.0.4"
simple-error = "0.1.10"
portaudio = "0.7"
sample = "0.9.0"
rb = "0.3.1"
serde = "1.0.27"
serde_derive = "1.0.27"
bincode = "1.0.0"
bytes = { version = "0.4.6", features = ["serde"] }
array-init = "0.0.2"
byteorder = "1.2.1"
pistoncore-sdl2_window = "0.49.1"
triple_buffer = {version = "2.0.0", features = ["raw"] }

[badges]
travis-ci = { repository = "kprevas/rust-nes", branch = "master" }

[profile.release]
debug = true