[package]
name = "emu"
version = "0.1.0"
authors = ["Gus Prevas <kprevas@gmail.com>"]

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
clap = { version = "4.0.29", features = ["derive"] }
piston = "0.53.2"
piston2d-graphics = "0.42.0"
piston2d-opengl_graphics = "0.81.0"
image = "0.24.4"
bitflags = "1.3.2"
time = "*"
piston_window = "0.127.0"
find_folder = "0.3.0"
hex-slice = "0.1.4"
rfd = "0.10.0"
simple-error = "0.2.3"
portaudio = "0.7"
dasp = "0.11.0"
rb = "0.4.1"
serde = "1.0.147"
serde_arrays = "0.1.0"
serde_derive = "1.0.138"
serde_with = "2.0.1"
bincode = "1.3.3"
bytes = { version = "1.2.1", features = ["serde"] }
array-init = "2.1.0"
byteorder = "1.4.3"
pistoncore-sdl2_window = "0.68.0"
triple_buffer = "6.2.0"
json = "0.12.4"
itertools = "0.10.5"
num-traits = "0.2.15"
num-integer = "0.1.45"
gfx_device_gl = "0.16.2"

[profile.release]
debug = true

[features]
test = []
